fixing datatables header alignment

--- a/ui/dataTable.css
+++ b/ui/dataTable.css
@@ -341,6 +341,13 @@ table.dataTable td {
     content: "";
     clear: both;
     height: 0; }
+    
+.dataTables_scrollHeadInner {
+    width: 100% !important;
+}
+.dataTables_scrollHeadInner table {
+    width: 100% !important;
+}
 
 @media screen and (max-width: 767px) {
     .dataTables_wrapper .dataTables_info,
@@ -356,3 +363,5 @@ table.dataTable td {
         text-align: center; }
     .dataTables_wrapper .dataTables_filter {
         margin-top: 0.5em; } }
+
+        
